[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/BRADHITC.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Graphics/Selector.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Menu Button.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[node name="Menu Button" type="TextureButton"]
margin_top = 192.0
margin_right = 1368.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 48 )
focus_mode = 1
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
margin_from_center = 100

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center] Button 1 [/center]"
text = " Button 1 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftMarker" type="Sprite" parent="."]
position = Vector2( 584, 24 )
scale = Vector2( 0.0754411, 0.0362667 )
texture = ExtResource( 2 )

[node name="RightMarker" type="Sprite" parent="."]
position = Vector2( 784, 24 )
scale = Vector2( 0.0754411, 0.0362667 )
texture = ExtResource( 2 )

[connection signal="focus_entered" from="." to="." method="_on_Menu_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Menu_Button_focus_exited"]
